--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_svg: ^1.1.4
   geocoding: ^2.0.4
   geolocator: ^9.0.1
+  responsive_framework: ^0.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
